削除機能の実装(途中)

--- a/www/remove_task_dialog.html
+++ b/www/remove_task_dialog.html
@@ -1,11 +1,6 @@
-<ons-alert-dialog id="insert-task" modifier="rowfooter">
+<ons-alert-dialog id="remove-task" modifier="rowfooter">
   <!-- 入力欄 -->
-  <div class="alert-dialog-content">
-    <ons-input
-      id="input_task_title"
-      modifier=""
-      placeholder="タスクを追加"
-    ></ons-input>
+  タスクを削除してもよろしいですか？
   </div>
   <!-- ボタン -->
   <div class="alert-dialog-footer">
@@ -13,7 +8,7 @@
       >Cancel</ons-alert-dialog-button
     >
     <ons-alert-dialog-button onclick="removeTask()"
-      >Add</ons-alert-dialog-button
+      >OK</ons-alert-dialog-button
     >
   </div>
 </ons-alert-dialog>
