--- a/www/index.html
+++ b/www/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <!-- CSS読み込み -->
-    <link rel="stylesheet" type="text/css" href="lib/onsenui/css/onsenui.css">
-    <link rel="stylesheet" type="text/css" href="lib/onsenui/css/onsen-css-components.css">
-    
+    <link rel="stylesheet" type="text/css" href="lib/onsenui/css/onsenui.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="lib/onsenui/css/onsen-css-components.css"
+    />
+
     <!-- JavaScript読み込み -->
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="lib/onsenui/js/onsenui.js"></script>
     <script type="text/javascript" src="lib/js/jquery-1.10.1.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-
+    <script type="text/javascript" src="js/env.js"></script>
     <title>Simple List App</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- ページ表示 -->
     <ons-navigator id="appNavigator" page="list.html"></ons-navigator>
-</body>
-
+  </body>
 </html>
