--- a/www/insert_task_dialog.html
+++ b/www/insert_task_dialog.html
@@ -9,10 +9,10 @@
   </div>
   <!-- ボタン -->
   <div class="alert-dialog-footer">
-    <ons-alert-dialog-button onclick="hideRemoveDialog()"
+    <ons-alert-dialog-button onclick="hideDialog()"
       >Cancel</ons-alert-dialog-button
     >
-    <ons-alert-dialog-button onclick="removeTask()"
+    <ons-alert-dialog-button onclick="insertTask()"
       >Add</ons-alert-dialog-button
     >
   </div>
